js/dashboard/src/views/relative_timing/relative_timing.css
.ba-row {
        padding-bottom:60px;
}

.ba-row .expanded td {
background:#f9f9fb;
            padding-top:10px;
            padding-bottom:10px;
}

.ba-row th {
  border-right:1px rgba(0,0,0,.1);
}

.ba-row th span.less-than, .ba-row th span.greater-than {
font-size:.9em;
width:55px;
transform:rotate(90deg);
text-align:center;
display:inline-block;
margin-left: -20px;

}
/*
.ba-row th span.less-than {
    font-size: .9em;
    width: 50px;
    transform: rotate(-90deg);
    display: inline-block;
    margin-left: -20px;
    text-align: center;
}
*/
.ba-row .table-wrapper tr th {
  border:0px;
  height:53px
}

.transform select {
  height: 36px;
  vertical-align: top;
      width:200px;
}

.transform {
  width:255px;
  padding:15px;
  vertical-align: top;
  display:inline-block;
  padding-top:0px;
}
.transform span {
  text-transform:uppercase;
  font-weight:bold
}

.transform .filter-values,
.transform .show-values {
  text-align:right;
  padding-top: 10px;
  margin-right:25px;
}

.ba-row tr td:not(:first-child) {

  color:transparent;
  cursor:pointer
}

.ba-row tr td:not(:first-child):hover, 
.ba-row.show-values tr td:not(:first-child),
.ba-row tr.expanded td {
  color:inherit
}
.summary-wrap .timeseries-row {
  /*padding-bottom:80px*/
}
.stream-wrap {
  
}
.stream-wrap .inner {
  margin-top:-60px
}
.stream-wrap .axis.before,
.stream-wrap .axis.after {
  display:none
}

.time-wrap {
}
.time-wrap rect {
  fill: grey
}
.time-wrap rect.selected,
.time-wrap rect:hover {
  fill: black
}

tr.hide-category, 
tr.hide-time {
  display:none
}

